--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -19,7 +19,7 @@ steps:
     npm install -g @angular/cli
     npm run ng build
     npm run build_prod --verbose
-  workingDirectory: '**/dhHelpdesk_NG.Web/DH.Helpdesk.WebMobile'
+  workingDirectory: '$(System.DefaultWorkingDirectory)'
   displayName: 'npm install and build'
 
 - task: CopyFiles@2
