Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -27,6 +27,7 @@ steps:
     command: custom  
     verbose: false  
     customCommand: 'run build'
+    workingDir: '$(System.DefaultWorkingDirectory)/DH.Helpdesk.WebMobile'
 
 # - script: |
 #     npm i
