Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -27,7 +27,7 @@ steps:
     command: custom  
     verbose: false  
     customCommand: 'ng build_prod'
-    workingDir: '$(Build.SourcesDirectory)/DH.Helpdesk.WebMobile'
+    workingDir: '/DH.Helpdesk.WebMobile'
 
 # - script: |
 #     npm i
