Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -21,6 +21,8 @@ steps:
     verbose: false  
     customCommand: 'install @angular/cli'  
 
+- script: echo "name is $(System.DefaultWorkingDirectory)"
+
 - task: Npm@1  
   displayName: Build  
   inputs:  
