--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -29,7 +29,7 @@ steps:
     command: custom  
     verbose: false  
     customCommand: 'ng build_prod'
-    workingDir: '/DH.Helpdesk.WebMobile'
+    workingDir: '/dhHelpdeskNG/DH.Helpdesk.WebMobile'
 
 # - script: |
 #     npm i
