--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -31,11 +31,16 @@ steps:
 #     customCommand: 'ng build_prod'
 #     workingDir: '$(System.DefaultWorkingDirectory)/dhHelpdeskNG/DH.Helpdesk.WebMobile'
 
+# - script: |
+#   npm install -g @angular/cli
+#   npm install
+#   displayName: 'npm install and build'
+
+
 - script: |
     npm i
     npm install -g @angular/cli
     npm run ng build
-    npm run build_prod --verbose
   workingDirectory: '$(System.DefaultWorkingDirectory)/dhHelpdeskNG/DH.Helpdesk.WebMobile'
   displayName: 'npm install and build'
 
