--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -36,19 +36,11 @@ steps:
 #   npm install
 #   displayName: 'npm install and build'
 
-
-# - script: |
-#     npm i
-#     npm install -g @angular/cli
-#     npm run ng build
-#   workingDirectory: '$(System.DefaultWorkingDirectory)/dhHelpdeskNG/DH.Helpdesk.WebMobile'
-#   displayName: 'npm install and build'
-
 - script: |
     npm i
     npm install -g @angular/cli
-    npm run ng build --stats-json --prod --configuration=dev-prod --output-hashing all
-  workingDirectory: '$(System.DefaultWorkingDirectory)/dhHelpdeskNG/DH.Helpdesk.WebMobile'
+    npm run ng build
+  workingDirectory: '$(System.DefaultWorkingDirectory)/dhHelpdeskNG/DH.Helpdesk.WebMobile/src'
   displayName: 'npm install and build'
 
 - task: CopyFiles@2
