--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -36,11 +36,18 @@ steps:
 #   npm install
 #   displayName: 'npm install and build'
 
+# - script: |
+#     npm i
+#     npm install -g @angular/cli
+#     npm run ng build
+#   workingDirectory: '$(System.DefaultWorkingDirectory)/dhHelpdeskNG/DH.Helpdesk.WebMobile'
+#   displayName: 'npm install and build'
+
 - script: |
-    npm i
     npm install -g @angular/cli
+    npm install
     npm run ng build
-  workingDirectory: '$(System.DefaultWorkingDirectory)/dhHelpdeskNG/DH.Helpdesk.WebMobile/src'
+  workingDirectory: '$(System.DefaultWorkingDirectory)/dhHelpdeskNG/DH.Helpdesk.WebMobile'
   displayName: 'npm install and build'
 
 - task: CopyFiles@2
