--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -12,7 +12,7 @@ pool:
 steps:
 - task: NodeTool@0
   inputs:
-    versionSpec: '10.x'
+    versionSpec: '10.18.1'
 
 # - task: Npm@1  
 #   displayName: 'Angular CLI'  
