--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -12,7 +12,7 @@ pool:
 steps:
 - task: NodeTool@0
   inputs:
-    versionSpec: '12.20.0'
+    versionSpec: '10.18.1'
 
 # - task: Npm@1  
 #   displayName: 'Angular CLI'  
@@ -44,7 +44,7 @@ steps:
 #   displayName: 'npm install and build'
 
 - script: |
-    npm install -g @angular/cli
+    npm install -g @angular/cli@8.3.29
     npm install
     npm run ng build
   workingDirectory: '$(System.DefaultWorkingDirectory)/dhHelpdeskNG/DH.Helpdesk.WebMobile'
