--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -29,8 +29,7 @@ steps:
 - task: CopyFiles@2
   displayName: 'Copy Files'
   inputs:
-    Contents: '**'
-    SourceFolder: './dist'
+    SourceFolder: 'build/**'
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
 
