--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -19,7 +19,7 @@ steps:
     npm install
     ng build --prod
   workingDirectory: '$(System.DefaultWorkingDirectory)/dhHelpdeskNG/DH.Helpdesk.WebMobile'
-  displayName: 'npm install'
+  displayName: 'npm install and build'
 
 # - script: |
 #     node ./node_modules/@angular/cli/bin/ng build
