--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -26,11 +26,11 @@ steps:
 #   displayName: 'ng build prod'
 #   workingDirectory: '$(System.DefaultWorkingDirectory)/dhHelpdeskNG/DH.Helpdesk.WebMobile'
 
-- task: CopyFiles@2
-  displayName: 'Copy Files'
-  inputs:
-    SourceFolder: 'wwwroot/**'
-    TargetFolder: '$(Build.ArtifactStagingDirectory)'
+# - task: CopyFiles@2
+#   displayName: 'Copy Files'
+#   inputs:
+#     SourceFolder: 'wwwroot/**'
+#     TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
 
 # - task: ArchiveFiles@2
@@ -40,6 +40,5 @@ steps:
 
 - task: PublishBuildArtifacts@1
   inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    PathtoPublish: '$(System.DefaultWorkingDirectory)/dist/'
     ArtifactName: 'Helpdesk_Mobile'
-    publishLocation: 'Container'
