--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -17,9 +17,16 @@ steps:
 - script: |
     npm install -g @angular/cli@8.3.29
     npm install
-    npm run ng build --prod
+    ng build --prod
   workingDirectory: '$(System.DefaultWorkingDirectory)/dhHelpdeskNG/DH.Helpdesk.WebMobile'
-  displayName: 'npm install ng build'
+  displayName: 'npm install and build'
+- script: 
+    npm install --force
+  workingDirectory: '$(System.DefaultWorkingDirectory)/dhHelpdeskNG/DH.Helpdesk.WebMobile'
+- script: 
+    node ./node_modules/@angular/cli/bin/ng build --prod
+  workingDirectory: '$(System.DefaultWorkingDirectory)/dhHelpdeskNG/DH.Helpdesk.WebMobile'
+  displayName: 'ng build prod'
 
 # - script: |
 #     node ./node_modules/@angular/cli/bin/ng build
@@ -29,9 +36,8 @@ steps:
 - task: CopyFiles@2
   displayName: 'Copy Files'
   inputs:
-    Contents: '**'
-    SourceFolder: '$(System.DefaultWorkingDirectory)/dhHelpdeskNG/DH.Helpdesk.WebMobile'
-    TargetFolder: '$(Build.ArtifactStagingDirectory)/Helpdesk_Mobile'
+    SourceFolder: '$(System.DefaultWorkingDirectory)/dhHelpdeskNG/DH.Helpdesk.WebMobile/wwwroot/**'
+    TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
 
 # - task: ArchiveFiles@2
