--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -16,13 +16,12 @@ steps:
 
 - script: |
     npm install -g @angular/cli@8.3.29
-    npm install
-    ng build --prod
   workingDirectory: '$(System.DefaultWorkingDirectory)/dhHelpdeskNG/DH.Helpdesk.WebMobile'
-  displayName: 'npm install and build'
+  displayName: 'npm install cli'
 - script: 
     npm install --force
   workingDirectory: '$(System.DefaultWorkingDirectory)/dhHelpdeskNG/DH.Helpdesk.WebMobile'
+  displayName: 'npm install'
 - script: 
     node ./node_modules/@angular/cli/bin/ng build --prod
   workingDirectory: '$(System.DefaultWorkingDirectory)/dhHelpdeskNG/DH.Helpdesk.WebMobile'
@@ -33,11 +32,11 @@ steps:
 #   displayName: 'ng build prod'
 #   workingDirectory: '$(System.DefaultWorkingDirectory)/dhHelpdeskNG/DH.Helpdesk.WebMobile'
 
-- task: CopyFiles@2
-  displayName: 'Copy Files'
-  inputs:
-    SourceFolder: '$(System.DefaultWorkingDirectory)/dhHelpdeskNG/DH.Helpdesk.WebMobile/wwwroot/**'
-    TargetFolder: '$(Build.ArtifactStagingDirectory)'
+# - task: CopyFiles@2
+#   displayName: 'Copy Files'
+#   inputs:
+#     SourceFolder: '$(System.DefaultWorkingDirectory)/dhHelpdeskNG/DH.Helpdesk.WebMobile/wwwroot/**'
+#     TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
 
 # - task: ArchiveFiles@2
