--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -32,11 +32,11 @@ steps:
 #   displayName: 'ng build prod'
 #   workingDirectory: '$(System.DefaultWorkingDirectory)/dhHelpdeskNG/DH.Helpdesk.WebMobile'
 
-# - task: CopyFiles@2
-#   displayName: 'Copy Files'
-#   inputs:
-#     SourceFolder: '$(System.DefaultWorkingDirectory)/dhHelpdeskNG/DH.Helpdesk.WebMobile/wwwroot/**'
-#     TargetFolder: '$(Build.ArtifactStagingDirectory)'
+- task: CopyFiles@2
+  displayName: 'Copy Files'
+  inputs:
+    SourceFolder: './wwwroot/**'
+    TargetFolder: '$(Build.ArtifactStagingDirectory)/DH.Helpdesk.WebMobile'
 
 
 # - task: ArchiveFiles@2
@@ -46,6 +46,5 @@ steps:
 
 - task: PublishBuildArtifacts@1
   inputs:
-    PathtoPublish: '$(System.DefaultWorkingDirectory)/dhHelpdeskNG/DH.Helpdesk.WebMobile'
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)/DH.Helpdesk.WebMobile'
     ArtifactName: 'Helpdesk_Mobile'
-    publishLocation: 'Container'
