--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -32,11 +32,11 @@ steps:
 #   displayName: 'ng build prod'
 #   workingDirectory: '$(System.DefaultWorkingDirectory)/dhHelpdeskNG/DH.Helpdesk.WebMobile'
 
-- task: CopyFiles@2
-  displayName: 'Copy Files'
-  inputs:
-    SourceFolder: './wwwroot/**'
-    TargetFolder: '$(Build.ArtifactStagingDirectory)/DH.Helpdesk.WebMobile'
+# - task: CopyFiles@2
+#   displayName: 'Copy Files'
+#   inputs:
+#     SourceFolder: './wwwroot/**'
+#     TargetFolder: '$(Build.ArtifactStagingDirectory)/DH.Helpdesk.WebMobile'
 
 
 # - task: ArchiveFiles@2
