--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -35,8 +35,8 @@ steps:
 - task: CopyFiles@2
   displayName: 'Copy Files'
   inputs:
-    SourceFolder: '$(System.DefaultWorkingDirectory)/dhHelpdeskNG/DH.Helpdesk.WebMobile/wwwroot/**'
-    TargetFolder: '$(Build.ArtifactStagingDirectory)/DH.Helpdesk.WebMobile'
+    SourceFolder: '$(System.DefaultWorkingDirectory)/DH.Helpdesk.WebMobile/wwwroot/**'
+    TargetFolder: '$(Build.ArtifactStagingDirectory)/DH-Helpdesk-WebMobile'
 
 
 
