--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -23,7 +23,7 @@ steps:
   workingDirectory: '$(System.DefaultWorkingDirectory)/dhHelpdeskNG/DH.Helpdesk.WebMobile'
   displayName: 'npm install'
 - script: 
-    node ./node_modules/@angular/cli/bin/ng build --prod
+    npm run ng build
   workingDirectory: '$(System.DefaultWorkingDirectory)/dhHelpdeskNG/DH.Helpdesk.WebMobile'
   displayName: 'ng build prod'
 
