Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -36,8 +36,8 @@ steps:
 - task: CopyFiles@2
   displayName: 'Copy Files'
   inputs:
-    SourceFolder: '$(System.DefaultWorkingDirectory)/dhHelpdeskNG/DH.Helpdesk.WebMobile/wwwroot/**'
-    TargetFolder: '$(Build.ArtifactStagingDirectory)/DH-Helpdesk-WebMobile'
+    Contents: 'build/**' 
+    TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
 
 
