--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -19,7 +19,7 @@ steps:
   workingDirectory: '$(System.DefaultWorkingDirectory)/dhHelpdeskNG/DH.Helpdesk.WebMobile'
   displayName: 'npm install cli'
 - script: 
-    npm install --force
+    npm install
   workingDirectory: '$(System.DefaultWorkingDirectory)/dhHelpdeskNG/DH.Helpdesk.WebMobile'
   displayName: 'npm install'
 - script: 
