--- a/dh-helpdesk-web.yml
+++ b/dh-helpdesk-web.yml
@@ -17,19 +17,21 @@ steps:
     restoreSolution: '$(solution)'
 
 - task: MSBuild@1
-  displayName: MSBuild DH.Helpdesk.Web
+  displayName: Build DH.Helpdesk.Web
   inputs:
     msbuildVersion: '17.0'  
     solution: '**/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj'
     msbuildArguments: '/p:TargetFrameworkVersion=v4.7.2 /p:SkipInvalidConfigurations=true /p:OutDir="$(Build.ArtifactStagingDirectory)"'
 
 - task: MSBuild@1
+  displayName: Build DH.Helpdesk.SelfService
   inputs:
     msbuildVersion: '17.0'  
     solution: '**/dhHelpdesk_NG.Web_SelfService/DH.Helpdesk.SelfService.csproj'
     msbuildArguments: '/p:TargetFrameworkVersion=v4.7.2 /p:SkipInvalidConfigurations=true /p:OutDir="$(Build.ArtifactStagingDirectory)"'
     
 - task: MSBuild@1
+  displayName: Build DH.Helpdesk.WebApi
   inputs:
     msbuildVersion: '17.0'  
     solution: '**/dhHelpdeskNG/DH.Helpdesk.WebApi/DH.Helpdesk.WebApi.csproj'
