--- a/dh-helpdesk-web.yml
+++ b/dh-helpdesk-web.yml
@@ -41,7 +41,7 @@ steps:
   inputs:
     msbuildVersion: '17.0'  
     solution: '**/dhHelpdeskNG/DH.Helpdesk.LDAP-AD/DH.Helpdesk.LDAP_AD.vbproj'
-    msbuildArguments: '/p:TargetFrameworkVersion=v4.7.2 /p:SkipInvalidConfigurations=true /p:OutDir="$(Build.ArtifactStagingDirectory)/DH.Helpdesk.LDAP_AD"'
+    msbuildArguments: '/p:TargetFrameworkVersion=v4.7.2 /p:SkipInvalidConfigurations=true /p:OutDir="$(Build.ArtifactStagingDirectory)\DH.Helpdesk.LDAP_AD"'
 
 - task: CopyFiles@2
   displayName: Copy DH-Helpdesk-Web
@@ -102,8 +102,8 @@ steps:
 #     Contents: '**'
 #     TargetFolder: '$(build.artifactstagingdirectory)/DH.Helpdesk.LDAP-AD'
 
-# - task: PublishBuildArtifacts@1
-#   displayName: PublishBuildArtifacts-LDAP-AD
-#   inputs:
-#     pathtoPublish: '$(Build.ArtifactStagingDirectory)/DH.Helpdesk.LDAP-AD' 
-#     artifactName: 'DH.Helpdesk.LDAP-AD'
+- task: PublishBuildArtifacts@1
+  displayName: PublishBuildArtifacts-LDAP-AD
+  inputs:
+    pathtoPublish: '$(Build.ArtifactStagingDirectory)/DH.Helpdesk.LDAP_AD' 
+    artifactName: 'DH.Helpdesk.LDAP-AD'
