--- a/dh-helpdesk-web.yml
+++ b/dh-helpdesk-web.yml
@@ -48,7 +48,7 @@ steps:
   displayName: Build DH.Helpdesk.Mail2Ticket
   inputs:
     msbuildVersion: '17.0'  
-    solution: '**/dhHelpdeskNG/DH.Helpdesk.LDAP-AD/DH.Helpdesk.Mail2Ticket.vbproj'
+    solution: '**/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket/DH.Helpdesk.Mail2Ticket.vbproj'
     msbuildArguments: '/p:TargetFrameworkVersion=v4.7.2 /p:SkipInvalidConfigurations=true /p:OutDir="$(Build.ArtifactStagingDirectory)\DH.Helpdesk.Mail2Ticket"'
 
 
