--- a/dh-helpdesk-web.yml
+++ b/dh-helpdesk-web.yml
@@ -62,7 +62,7 @@ steps:
   displayName: Build DH.Helpdesk.TaskScheduler
   inputs:
     msbuildVersion: '17.0'  
-    solution: '**/dhHelpdeskNG/DH.Helpdesk.TaskScheduler/DH.Helpdesk.TaskScheduler.vbproj'
+    solution: '**/dhHelpdeskNG/DH.Helpdesk.TaskScheduler/DH.Helpdesk.TaskScheduler.csproj'
     msbuildArguments: '/p:TargetFrameworkVersion=v4.7.2 /p:SkipInvalidConfigurations=true /p:OutDir="$(Build.ArtifactStagingDirectory)\DH.Helpdesk.TaskScheduler"'
 
 - task: MSBuild@1
